DuPont DevSB/src/objects/Lead_Contact_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting used to link the incoming Lead to an existing contact based on the email Id</description>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <inlineHelpText>Example format : Campaign ID = 701Q00000006h2r.  
(Maximum 5 Campaign ID&apos;s in Comma separated format)</inlineHelpText>
        <label>Campaign Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Geo_Region__c</fullName>
        <label>Contact Geo Region</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Program__c</fullName>
        <label>Contact Program</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <description>Contacts&apos; Record Type</description>
        <label>Contact Record Type</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Origin_Name__c</fullName>
        <description>Lead&apos;s Origin Name</description>
        <label>Lead Origin Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lead Contact Mapping</label>
</CustomObject>